# pywepoll

./: .gitignore  README.md  pyproject.toml  ruff.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: dependabot-auto-merge.yml  release-wheels.yml  run-cibuildwheel.yml  test.yaml
requirements/: test.txt
tests/: test_wepoll_cyares.py  test_wepoll_eventloop.py  test_wepoll_selectors.py
wepoll/: __init__.py  _core.pyx  _wepoll.pxd  _wepoll.pyi  _wepoll.pyx  fix_313.h  flags.py  loop.py  msvc_compat.h  msvcrt.pxd  selector.py  socket.pxd  wepoll.pxd
