[project]
name = "wepoll"
description = "Cython adaptation of the wepoll C Library providing epoll selectors to windows"
dynamic = ["version"]
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[tool.cibuildwheel]
build-frontend = "build"

[tool.setuptools.dynamic]
version = {attr = "wepoll.__version__"}


[build-system]
requires = ["setuptools", "cython", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
zip-safe = false
packages = ['wepoll']

[project.urls]
    homepage = "https://github.com/Vizonex/pywepoll"
    repository = "https://github.com/Vizonex/pywepoll.git"
